voicevox_core.h

typedef int32_t VoicevoxResultCode;
typedef int32_t VoicevoxUserDictWordType;
/**
 * 音声シンセサイザ。
 *
 * <b>構築</b>(_construction_)は ::voicevox_synthesizer_new で行い、<b>破棄</b>(_destruction_)は ::voicevox_synthesizer_delete で行う。
 *
 * \orig-impl{VoicevoxSynthesizer}
 */
typedef struct VoicevoxSynthesizer VoicevoxSynthesizer;
/**
 * ユーザー辞書。
 *
 * \orig-impl{VoicevoxUserDict}
 */
typedef struct VoicevoxUserDict VoicevoxUserDict;
/**
 * 音声モデルID。
 *
 * \orig-impl{VoicevoxVoiceModelId}
 */
typedef const uint8_t (*VoicevoxVoiceModelId)[16];
/**
 * スタイルID。
 *
 * VOICEVOXにおける、ある<i>キャラクター</i>のある<i>スタイル</i>を指す。
 *
 * \orig-impl{VoicevoxStyleId}
 */
typedef uint32_t VoicevoxStyleId;
/**
 * ::voicevox_synthesizer_synthesis のオプション。
 *
 * \no-orig-impl{VoicevoxSynthesisOptions}
 */
typedef struct VoicevoxSynthesisOptions
{
  /**
   * 疑問文の調整を有効にする
   */
  bool enable_interrogative_upspeak;
} VoicevoxSynthesisOptions;
/**
 * ::voicevox_synthesizer_tts のオプション。
 *
 * \no-orig-impl{VoicevoxTtsOptions}
 */
typedef struct VoicevoxTtsOptions
{
  /**
   * 疑問文の調整を有効にする
   */
  bool enable_interrogative_upspeak;
} VoicevoxTtsOptions;
/**
 * ユーザー辞書の単語。
 *
 * \orig-impl{VoicevoxUserDictWord}
 */
typedef struct VoicevoxUserDictWord
{
  /**
   * 表記
   */
  const char *surface;
  /**
   * 読み
   */
  const char *pronunciation;
  /**
   * アクセント型
   */
  uintptr_t accent_type;
  /**
   * 単語の種類
   */
  VoicevoxUserDictWordType word_type;
  /**
   * 優先度
   */
  uint32_t priority;
} VoicevoxUserDictWord;
  VoicevoxResultCode
  voicevox_synthesizer_replace_mora_pitch(const struct VoicevoxSynthesizer *synthesizer,
                                          const char *accent_phrases_json,
                                          VoicevoxStyleId style_id,
                                          char **output_accent_phrases_json);
  struct VoicevoxSynthesisOptions
  voicevox_make_default_synthesis_options(void);
  VoicevoxResultCode
  voicevox_synthesizer_synthesis(const struct VoicevoxSynthesizer *synthesizer,
                                 const char *audio_query_json,
                                 VoicevoxStyleId style_id,
                                 struct VoicevoxSynthesisOptions options,
                                 uintptr_t *output_wav_length,
                                 uint8_t **output_wav);
  struct VoicevoxTtsOptions
  voicevox_make_default_tts_options(void);
  VoicevoxResultCode
  voicevox_synthesizer_tts_from_kana(const struct VoicevoxSynthesizer *synthesizer,
                                     const char *kana,
                                     VoicevoxStyleId style_id,
                                     struct VoicevoxTtsOptions options,
                                     uintptr_t *output_wav_length,
                                     uint8_t **output_wav);
  VoicevoxResultCode
  voicevox_synthesizer_tts(const struct VoicevoxSynthesizer *synthesizer,
                           const char *text,
                           VoicevoxStyleId style_id,
                           struct VoicevoxTtsOptions options,
                           uintptr_t *output_wav_length,
                           uint8_t **output_wav);
  void
  voicevox_json_free(char *json);
  void
  voicevox_wav_free(uint8_t *wav);
  const char *
  voicevox_error_result_to_message(VoicevoxResultCode result_code);
  struct VoicevoxUserDictWord
  voicevox_user_dict_word_make(const char *surface,
                               const char *pronunciation,
                               uintptr_t accent_type);
  struct VoicevoxUserDict *
  voicevox_user_dict_new(void);
  VoicevoxResultCode
  voicevox_user_dict_load(const struct VoicevoxUserDict *user_dict,
                          const char *dict_path);
  VoicevoxResultCode
  voicevox_user_dict_add_word(const struct VoicevoxUserDict *user_dict,
                              const struct VoicevoxUserDictWord *word,
                              uint8_t (*output_word_uuid)[16]);
  VoicevoxResultCode
  voicevox_user_dict_update_word(const struct VoicevoxUserDict *user_dict,
                                 const uint8_t (*word_uuid)[16],
                                 const struct VoicevoxUserDictWord *word);
  VoicevoxResultCode
  voicevox_user_dict_remove_word(const struct VoicevoxUserDict *user_dict,
                                 const uint8_t (*word_uuid)[16]);
  VoicevoxResultCode
  voicevox_user_dict_to_json(const struct VoicevoxUserDict *user_dict,
                             char **output_json);
  VoicevoxResultCode
  voicevox_user_dict_import(const struct VoicevoxUserDict *user_dict,
                            const struct VoicevoxUserDict *other_dict);