lib/generated_bindings.dart


  late final _voicevox_synthesizer_replace_mora_pitchPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode$1 Function(
                  ffi.Pointer<VoicevoxSynthesizer>,
                  ffi.Pointer<ffi.Char>,
                  VoicevoxStyleId,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'voicevox_synthesizer_replace_mora_pitch');
  late final _voicevox_synthesizer_replace_mora_pitch =
      _voicevox_synthesizer_replace_mora_pitchPtr.asFunction<
          int Function(ffi.Pointer<VoicevoxSynthesizer>, ffi.Pointer<ffi.Char>,
              int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  VoicevoxSynthesisOptions voicevox_make_default_synthesis_options() {
    return _voicevox_make_default_synthesis_options();
  }

  late final _voicevox_make_default_synthesis_optionsPtr =
      _lookup<ffi.NativeFunction<VoicevoxSynthesisOptions Function()>>(
          'voicevox_make_default_synthesis_options');
  late final _voicevox_make_default_synthesis_options =
      _voicevox_make_default_synthesis_optionsPtr
          .asFunction<VoicevoxSynthesisOptions Function()>();

  int voicevox_synthesizer_synthesis(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
    ffi.Pointer<ffi.Char> audio_query_json,
    int style_id,
    VoicevoxSynthesisOptions options,
    ffi.Pointer<ffi.UintPtr> output_wav_length,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> output_wav,
  ) {
    return _voicevox_synthesizer_synthesis(
      synthesizer,
      audio_query_json,
      style_id,
      options,
      output_wav_length,
      output_wav,
    );
  }

  late final _voicevox_synthesizer_synthesisPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode$1 Function(
                  ffi.Pointer<VoicevoxSynthesizer>,
                  ffi.Pointer<ffi.Char>,
                  VoicevoxStyleId,
                  VoicevoxSynthesisOptions,
                  ffi.Pointer<ffi.UintPtr>,
                  ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>>(
      'voicevox_synthesizer_synthesis');
  late final _voicevox_synthesizer_synthesis =
      _voicevox_synthesizer_synthesisPtr.asFunction<
          int Function(
              ffi.Pointer<VoicevoxSynthesizer>,
              ffi.Pointer<ffi.Char>,
              int,
              VoicevoxSynthesisOptions,
              ffi.Pointer<ffi.UintPtr>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>();

  VoicevoxTtsOptions voicevox_make_default_tts_options() {
    return _voicevox_make_default_tts_options();
  }

  late final _voicevox_make_default_tts_optionsPtr =
      _lookup<ffi.NativeFunction<VoicevoxTtsOptions Function()>>(
          'voicevox_make_default_tts_options');
  late final _voicevox_make_default_tts_options =
      _voicevox_make_default_tts_optionsPtr
          .asFunction<VoicevoxTtsOptions Function()>();

  int voicevox_synthesizer_tts_from_kana(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
    ffi.Pointer<ffi.Char> kana,
    int style_id,
    VoicevoxTtsOptions options,
    ffi.Pointer<ffi.UintPtr> output_wav_length,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> output_wav,
  ) {
    return _voicevox_synthesizer_tts_from_kana(
      synthesizer,
      kana,
      style_id,
      options,
      output_wav_length,
      output_wav,
    );
  }

  late final _voicevox_synthesizer_tts_from_kanaPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode$1 Function(
                  ffi.Pointer<VoicevoxSynthesizer>,
                  ffi.Pointer<ffi.Char>,
                  VoicevoxStyleId,
                  VoicevoxTtsOptions,
                  ffi.Pointer<ffi.UintPtr>,
                  ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>>(
      'voicevox_synthesizer_tts_from_kana');
  late final _voicevox_synthesizer_tts_from_kana =
      _voicevox_synthesizer_tts_from_kanaPtr.asFunction<
          int Function(
              ffi.Pointer<VoicevoxSynthesizer>,
              ffi.Pointer<ffi.Char>,
              int,
              VoicevoxTtsOptions,
              ffi.Pointer<ffi.UintPtr>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>();

  int voicevox_synthesizer_tts(
    ffi.Pointer<VoicevoxSynthesizer> synthesizer,
    ffi.Pointer<ffi.Char> text,
    int style_id,
    VoicevoxTtsOptions options,
    ffi.Pointer<ffi.UintPtr> output_wav_length,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> output_wav,
  ) {
    return _voicevox_synthesizer_tts(
      synthesizer,
      text,
      style_id,
      options,
      output_wav_length,
      output_wav,
    );
  }

  late final _voicevox_synthesizer_ttsPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode$1 Function(
                  ffi.Pointer<VoicevoxSynthesizer>,
                  ffi.Pointer<ffi.Char>,
                  VoicevoxStyleId,
                  VoicevoxTtsOptions,
                  ffi.Pointer<ffi.UintPtr>,
                  ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>>(
      'voicevox_synthesizer_tts');
  late final _voicevox_synthesizer_tts =
      _voicevox_synthesizer_ttsPtr.asFunction<
          int Function(
              ffi.Pointer<VoicevoxSynthesizer>,
              ffi.Pointer<ffi.Char>,
              int,
              VoicevoxTtsOptions,
              ffi.Pointer<ffi.UintPtr>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>();

  void voicevox_json_free(
    ffi.Pointer<ffi.Char> json,
  ) {
    return _voicevox_json_free(
      json,
    );
  }

  late final _voicevox_json_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'voicevox_json_free');
  late final _voicevox_json_free =
      _voicevox_json_freePtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void voicevox_wav_free(
    ffi.Pointer<ffi.Uint8> wav,
  ) {
    return _voicevox_wav_free(
      wav,
    );
  }

  late final _voicevox_wav_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Uint8>)>>(
          'voicevox_wav_free');
  late final _voicevox_wav_free =
      _voicevox_wav_freePtr.asFunction<void Function(ffi.Pointer<ffi.Uint8>)>();

  ffi.Pointer<ffi.Char> voicevox_error_result_to_message(
    int result_code,
  ) {
    return _voicevox_error_result_to_message(
      result_code,
    );
  }

  late final _voicevox_error_result_to_messagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              VoicevoxResultCode$1)>>('voicevox_error_result_to_message');
  late final _voicevox_error_result_to_message =
      _voicevox_error_result_to_messagePtr
          .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  VoicevoxUserDictWord voicevox_user_dict_word_make(
    ffi.Pointer<ffi.Char> surface,
    ffi.Pointer<ffi.Char> pronunciation,
    int accent_type,
  ) {
    return _voicevox_user_dict_word_make(
      surface,
      pronunciation,
      accent_type,
    );
  }

  late final _voicevox_user_dict_word_makePtr = _lookup<
      ffi.NativeFunction<
          VoicevoxUserDictWord Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.UintPtr)>>('voicevox_user_dict_word_make');
  late final _voicevox_user_dict_word_make =
      _voicevox_user_dict_word_makePtr.asFunction<
          VoicevoxUserDictWord Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  ffi.Pointer<VoicevoxUserDict> voicevox_user_dict_new() {
    return _voicevox_user_dict_new();
  }

  late final _voicevox_user_dict_newPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<VoicevoxUserDict> Function()>>(
          'voicevox_user_dict_new');
  late final _voicevox_user_dict_new = _voicevox_user_dict_newPtr
      .asFunction<ffi.Pointer<VoicevoxUserDict> Function()>();

  int voicevox_user_dict_load(
    ffi.Pointer<VoicevoxUserDict> user_dict,
    ffi.Pointer<ffi.Char> dict_path,
  ) {
    return _voicevox_user_dict_load(
      user_dict,
      dict_path,
    );
  }

  late final _voicevox_user_dict_loadPtr = _lookup<
      ffi.NativeFunction<
          VoicevoxResultCode$1 Function(ffi.Pointer<VoicevoxUserDict>,
              ffi.Pointer<ffi.Char>)>>('voicevox_user_dict_load');
  late final _voicevox_user_dict_load = _voicevox_user_dict_loadPtr.asFunction<
      int Function(ffi.Pointer<VoicevoxUserDict>, ffi.Pointer<ffi.Char>)>();

  int voicevox_user_dict_add_word(
    ffi.Pointer<VoicevoxUserDict> user_dict,
    ffi.Pointer<VoicevoxUserDictWord> word,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> output_word_uuid,
  ) {
    return _voicevox_user_dict_add_word(
      user_dict,
      word,
      output_word_uuid,
    );
  }

  late final _voicevox_user_dict_add_wordPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode$1 Function(
                  ffi.Pointer<VoicevoxUserDict>,
                  ffi.Pointer<VoicevoxUserDictWord>,
                  ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>>(
      'voicevox_user_dict_add_word');
  late final _voicevox_user_dict_add_word =
      _voicevox_user_dict_add_wordPtr.asFunction<
          int Function(
              ffi.Pointer<VoicevoxUserDict>,
              ffi.Pointer<VoicevoxUserDictWord>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>();

  int voicevox_user_dict_update_word(
    ffi.Pointer<VoicevoxUserDict> user_dict,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> word_uuid,
    ffi.Pointer<VoicevoxUserDictWord> word,
  ) {
    return _voicevox_user_dict_update_word(
      user_dict,
      word_uuid,
      word,
    );
  }

  late final _voicevox_user_dict_update_wordPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode$1 Function(
                  ffi.Pointer<VoicevoxUserDict>,
                  ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
                  ffi.Pointer<VoicevoxUserDictWord>)>>(
      'voicevox_user_dict_update_word');
  late final _voicevox_user_dict_update_word =
      _voicevox_user_dict_update_wordPtr.asFunction<
          int Function(
              ffi.Pointer<VoicevoxUserDict>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
              ffi.Pointer<VoicevoxUserDictWord>)>();

  int voicevox_user_dict_remove_word(
    ffi.Pointer<VoicevoxUserDict> user_dict,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> word_uuid,
  ) {
    return _voicevox_user_dict_remove_word(
      user_dict,
      word_uuid,
    );
  }

  late final _voicevox_user_dict_remove_wordPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode$1 Function(ffi.Pointer<VoicevoxUserDict>,
                  ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>>(
      'voicevox_user_dict_remove_word');
  late final _voicevox_user_dict_remove_word =
      _voicevox_user_dict_remove_wordPtr.asFunction<
          int Function(ffi.Pointer<VoicevoxUserDict>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>();

  int voicevox_user_dict_to_json(
    ffi.Pointer<VoicevoxUserDict> user_dict,
    ffi.Pointer<ffi.Pointer<ffi.Char>> output_json,
  ) {
    return _voicevox_user_dict_to_json(
      user_dict,
      output_json,
    );
  }

  late final _voicevox_user_dict_to_jsonPtr = _lookup<
          ffi.NativeFunction<
              VoicevoxResultCode$1 Function(ffi.Pointer<VoicevoxUserDict>,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'voicevox_user_dict_to_json');
  late final _voicevox_user_dict_to_json =
      _voicevox_user_dict_to_jsonPtr.asFunction<
          int Function(ffi.Pointer<VoicevoxUserDict>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  int voicevox_user_dict_import(
    ffi.Pointer<VoicevoxUserDict> user_dict,
    ffi.Pointer<VoicevoxUserDict> other_dict,
  ) {
    return _voicevox_user_dict_import(
      user_dict,
      other_dict,
    );
  }
